force-app/main/default/objects/Oanda_Trade__x/Oanda_Trade__x.object-meta.xml
<CustomObject>
    <externalDataSource>Amazon_DynamoDB_EU_West_1</externalDataSource>
    <externalName>Oanda-Trades-Table-1</externalName>
    <label>Oanda Trade</label>
    <pluralLabel>Oanda Trades</pluralLabel>
</CustomObject>