force-app/main/default/objects/Oanda_Trade__x/fields/Close_Comments__c.field-meta.xml
<CustomField>
    <fullName>Close_Comments__c</fullName>
    <externalDeveloperName>closeComments</externalDeveloperName>
    <label>Close Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>