force-app/main/default/objects/Oanda_Trade__x/fields/Close_URL__c.field-meta.xml
<CustomField>
    <fullName>Close_URL__c</fullName>
    <externalDeveloperName>closeUrl</externalDeveloperName>
    <label>Close URL</label>
    <type>Url</type>
</CustomField>