force-app/main/default/objects/Oanda_Trade__x/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>currency</externalDeveloperName>
    <label>Currency</label>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>Oanda Trades</relationshipLabel>
    <relationshipName>Oanda_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>