force-app/main/default/objects/Oanda_Trade__x/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <externalDeveloperName>OandaId</externalDeveloperName>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>