force-app/main/default/objects/Oanda_Trade__x/fields/Monthly_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>monthlyTransaction</externalDeveloperName>
    <label>Monthly Transaction</label>
    <referenceTo>Monthly_Transaction__c</referenceTo>
    <relationshipLabel>Oanda Trades</relationshipLabel>
    <relationshipName>Oanda_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>