force-app/main/default/objects/Oanda_Trade__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>