force-app/main/default/objects/Oanda_Trade__x/fields/Oanda_Id__c.field-meta.xml
<CustomField>
    <fullName>Oanda_Id__c</fullName>
    <externalDeveloperName>oanda-trade-id</externalDeveloperName>
    <label>Oanda Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>