force-app/main/default/objects/Oanda_Trade__x/fields/Open_Comments__c.field-meta.xml
<CustomField>
    <fullName>Open_Comments__c</fullName>
    <externalDeveloperName>openComments</externalDeveloperName>
    <label>Open Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>