force-app/main/default/objects/Oanda_Trade__x/fields/Open_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Open_Date_Time__c</fullName>
    <externalDeveloperName>openDateTime</externalDeveloperName>
    <label>Open Date/Time</label>
    <type>DateTime</type>
</CustomField>