force-app/main/default/objects/Oanda_Trade__x/fields/Open_URL__c.field-meta.xml
<CustomField>
    <fullName>Open_URL__c</fullName>
    <externalDeveloperName>openUrl</externalDeveloperName>
    <label>Open URL</label>
    <type>Url</type>
</CustomField>