force-app/main/default/objects/Oanda_Trade__x/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <externalDeveloperName>outcome</externalDeveloperName>
    <label>Outcome</label>
    <length>25</length>
    <type>Text</type>
</CustomField>