force-app/main/default/objects/Oanda_Trade__x/fields/Profit_Loss__c.field-meta.xml
<CustomField>
    <fullName>Profit_Loss__c</fullName>
    <externalDeveloperName>profit_loss</externalDeveloperName>
    <label>Profit Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>