force-app/main/default/objects/Oanda_Trade__x/fields/Second_Screenshot__c.field-meta.xml
<CustomField>
    <fullName>Second_Screenshot__c</fullName>
    <externalDeveloperName>secondScreenshot</externalDeveloperName>
    <label>Second Screenshot</label>
    <type>Url</type>
</CustomField>