force-app/main/default/objects/Oanda_Trade__x/fields/Side__c.field-meta.xml
<CustomField>
    <fullName>Side__c</fullName>
    <externalDeveloperName>side</externalDeveloperName>
    <label>Side</label>
    <length>25</length>
    <type>Text</type>
</CustomField>